--- a/BinaryClassification-3.ipynb
+++ b/BinaryClassification-3.ipynb
@@ -1356,7 +1356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "메타 정보가 들어간 데이터프레임을 왜 만드는지 모르겠음. "
+    "메타 정보가 들어간 데이터프레임을 왜 만드는지 모르겠음. -> column 이 너무 많아서 효율적으로 분석하기 위해서?"
    ]
   },
   {
@@ -2789,12 +2789,12 @@
    "metadata": {},
    "source": [
     "target data에서 1이 차지하는 비중이 0.0365 -? 3.65% 밖에 안됨. 0 이 너무 많아서\n",
-    "균형이 맞지 않는 데이터임.imbalanced classes -> 처리하는 방법이 있음\n",
-    "records with target=1 is far less than target=0. This can lead to a model that has great accuracy but does have any added value in practice. \n",
-    "이러한 불균형 데이터를 모델 학습이 제대로 이루어지지 않게 한다. 모두 0으로만 해도 96% 정확도를 갖게 되니까\n",
-    "1. oversampling records with target = 1\n",
-    "2. undersampling records with target = 0\n",
-    "이외의 다른 방법들도 있음"
+    "균형이 맞지 않는 데이터임.imbalanced classes -> 처리하는 방법이 있음  \n",
+    "records with target=1 is far less than target=0. This can lead to a model that has great accuracy but does have any added value in practice.   \n",
+    "이러한 불균형 데이터를 모델 학습이 제대로 이루어지지 않게 한다. 모두 0으로만 해도 96% 정확도를 갖게 되니까  \n",
+    "1. oversampling records with target = 1  \n",
+    "2. undersampling records with target = 0  \n",
+    "이외의 다른 방법들도 있음  "
    ]
   },
   {
@@ -2844,7 +2844,7 @@
    "metadata": {},
    "source": [
     "undersample 을 진행하였고 어느 정도 비중을 언더샘플링 할 것인지 몇 개 인지 구하고\n",
-    "언더샘플링을 진행. shuffle() 함수를 통해 랜덤으로 뽑았음.\n",
+    "언더샘플링을 진행. shuffle() 함수를 통해 랜덤으로 뽑았음.  \n",
     "그래서 언더샘플링한 리스트랑 1이 있던 리스트랑 합쳐서 새로운 train 셋을 만듬."
    ]
   },
@@ -2943,27 +2943,27 @@
    "metadata": {},
    "source": [
     " <결측치 채우는 방법>\n",
-    "sklearn.preprocessing.Imputer\n",
-    "default => Imputer(missing_values='NaN', strategy='mean, median, most_frequent', axis=0, verbose=0, copy=True)\n",
-    "Imputer 를 만들어줌. 만든 걸 가지고 이후에 fit 시켜야함\n",
-    "missing_values : 데이터 프레임 내에서 결측치 표시된 것 요소. -1, 0, NaN 등이 있을 수 있음\n",
-    "strategy : 대신 뭘로 채울 것인지\n",
-    "axis : 행 or 열\n",
-    "verbose : control the verbosity of imputer\n",
+    "sklearn.preprocessing.Imputer  \n",
+    "default => Imputer(missing_values='NaN', strategy='mean, median, most_frequent', axis=0, verbose=0, copy=True)  \n",
+    "Imputer 를 만들어줌. 만든 걸 가지고 이후에 fit 시켜야함  \n",
+    "missing_values : 데이터 프레임 내에서 결측치 표시된 것 요소. -1, 0, NaN 등이 있을 수 있음  \n",
+    "strategy : 대신 뭘로 채울 것인지  \n",
+    "axis : 행 or 열  \n",
+    "verbose : control the verbosity of imputer  \n",
     "\n",
-    "Method\n",
-    "fit(X [ ,y])\n",
-    "fit_transform(X[ ,y])\n",
-    "get_params, set_params, transform(X) 등이 있음\n",
+    "Method  \n",
+    "fit(X [ ,y])  \n",
+    "fit_transform(X[ ,y])   \n",
+    "get_params, set_params, transform(X) 등이 있음  \n",
     "\n",
-    "fit_transform -> X : numpy array of shape(training set)\n",
-    "y : numpy array of shape(target values)\n",
+    "fit_transform -> X : numpy array of shape(training set)  \n",
+    "y : numpy array of shape(target values)  \n",
     "\n",
-    "ravel() : reshape 의 반대가 ravel. flatten 과 동일. 평평하게 펴줌.\n",
-    "array([0,1,2,3]) -> array([[0,1],\n",
-    "                          [2,3]])\n",
+    "ravel() : reshape 의 반대가 ravel. flatten 과 동일. 평평하게 펴줌.  \n",
+    "array([0,1,2,3]) -> array([[0,1],  \n",
+    "                          [2,3]])  \n",
     "                          \n",
-    "   -> 방향으로 변화 시키는게 reshape / <- 방향으로 변화시키는게 ravel "
+    "   -> 방향으로 변화 시키는게 reshape / <- 방향으로 변화시키는게 ravel  "
    ]
   },
   {
@@ -3177,17 +3177,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "encoding 인데 이걸로 뭘 하려고 했는지 잘 모르겠음.\n",
-    "코드가 너무 복잡하고 설명이 많지 않음.\n",
-    "다만 메타 DF 을 만든 이유는 column 이 너무 많아서 for 문으로 통제하기 위해서 만들었지 않나라는 생각이 든다.\n",
+    "encoding 인데 이걸로 뭘 하려고 했는지 잘 모르겠음. \n",
+    "코드가 너무 복잡하고 설명이 많지 않음.  \n",
+    "다만 메타 DF 을 만든 이유는 column 이 너무 많아서 for 문으로 통제하기 위해서 만들었지 않나라는 생각이 든다.  \n",
     "\n",
-    "groupby 를 사용하면 size, max, mean, sum, count 등의 함수를 사용할 수 있는데, 이를 한번에 여러개 사용하기 위해서는 grouped.agg() 가 필요하다.\n",
-    ".agg() : agg(['sum', 'mean', 'count']) 이런식으로 사용하면 된다.\n",
-    "그 결과 옆으로 sum, mean, count 가 순서대로 나온다.\n",
-    "혹은 function_list=['size', 'sum', 'mean'] 해두고\n",
-    "grouped.agg(function_list)\n",
-    "이렇게 입력해줘도 동일한 결과가 출력된다.\n",
-    "groupby 한 데이터의 여러가지 통계 수치를 보고 싶을 때 사용하면 된다.   "
+    "groupby 를 사용하면 size, max, mean, sum, count 등의 함수를 사용할 수 있는데, 이를 한번에 여러개 사용하기 위해서는 grouped.agg() 가 필요하다.  \n",
+    ".agg() : agg(['sum', 'mean', 'count']) 이런식으로 사용하면 된다.  \n",
+    "그 결과 옆으로 sum, mean, count 가 순서대로 나온다.  \n",
+    "혹은 function_list=['size', 'sum', 'mean'] 해두고  \n",
+    "grouped.agg(function_list)  \n",
+    "이렇게 입력해줘도 동일한 결과가 출력된다.  \n",
+    "groupby 한 데이터의 여러가지 통계 수치를 보고 싶을 때 사용하면 된다.      "
    ]
   },
   {
@@ -3517,12 +3517,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "상관관계가 높은 변수들의 target 에 따른 차이를 알아보려고함.\n",
-    "상관관계가 높다? -> 변수가 겹친다 -> 차원축소를 위해, 다중공선성 문제 해소 등을 위해 정리해주는 것이 좋다.\n",
-    "Principal Component Analysis : PCA 진행\n",
-    "reduce the dimensions\n",
-    "그래서 어떤지 한번 그래프로 보는 것.\n",
-    "어떻게 변수들을 grouping 할 것인지, 어떤 더미 변수를 만들 것인지 등등 이후의 feature engineering 을 위해서"
+    "상관관계가 높은 변수들의 target 에 따른 차이를 알아보려고함.  \n",
+    "상관관계가 높다? -> 변수가 겹친다 -> 차원축소를 위해, 다중공선성 문제 해소 등을 위해 정리해주는 것이 좋다.  \n",
+    "Principal Component Analysis : PCA 진행  \n",
+    "reduce the dimensions  \n",
+    "그래서 어떤지 한번 그래프로 보는 것.  \n",
+    "어떻게 변수들을 grouping 할 것인지, 어떤 더미 변수를 만들 것인지 등등 이후의 feature engineering 을 위해서  "
    ]
   },
   {
@@ -3655,7 +3655,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "순서형(서수형) meta 데이터들은 상관관계가 거의 없어보임. 어떻게 변수들을 그룹핑 할 것인지 고려해야함.\n",
+    "순서형(서수형) meta 데이터들은 상관관계가 거의 없어보임. 어떻게 변수들을 그룹핑 할 것인지 고려해야함.  \n",
     "Feature engineering 수행"
    ]
   },
@@ -3690,13 +3690,13 @@
    "metadata": {},
    "source": [
     "더미변수 생성 전후 column 수 비교\n",
-    "drop_first : k개의 카테고리에서 k-1 개의 더미변수를 얻을 것인지 removing the first level -> 왜 하는건지 알아봐야함.\n",
-    "default = False\n",
-    "더미변수란 범주형 변수를 연속형 변수로 변환한 것. 연속형 변수 같이 만드는 것\n",
-    "연속형 변수로만 가능한 분석기법을 사용하기 위해서 변환하는 것\n",
+    "drop_first : k개의 카테고리에서 k-1 개의 더미변수를 얻을 것인지 removing the first   level -> 왜 하는건지 알아봐야함.  \n",
+    "default = False  \n",
+    "더미변수란 범주형 변수를 연속형 변수로 변환한 것. 연속형 변수 같이 만드는 것  \n",
+    "연속형 변수로만 가능한 분석기법을 사용하기 위해서 변환하는 것  \n",
     "ex. 다중회귀, 로지스틱 회귀 등등 대부분의 모델이 연속형이 아니면 분석기법 적용 불가\n",
-    "더미변수는 범주 개수보다 1개 적게 만들어진다.\n",
-    "예를 들어 남성, 여성이라고 하면 남성여부, 여성여부 둘 중 하나만 만들어지면 둘 다 설명이 가능하니까 k개 보다 1개가 적게 만들어짐."
+    "더미변수는 범주 개수보다 1개 적게 만들어진다.  \n",
+    "예를 들어 남성, 여성이라고 하면 남성여부, 여성여부 둘 중 하나만 만들어지면 둘 다 설명이 가능하니까 k개 보다 1개가 적게 만들어짐.  "
    ]
   },
   {
@@ -3838,19 +3838,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "왜 제거하는지?\n",
-    "제거하면 성능이 올라가는지? -> 모델에 적용할 input 변수를 잘 선정하는 것은 모델의 성능에 직접적인 영향을 미침.\n",
-    "1% 보다 낮은 variance 가 뭔지? 숫자가 낮다?\n",
-    "열을 통째로 삭제한게 아니라 0.01 이하 값 행을 삭제한것?\n",
-    "< Feature selection > \n",
-    "Variance Threshold -> variance(변화량, 분산) 가 threshold 보다 작은 변수를 제거함.\n",
-    "variance 가 낮다는 것은 변수 안에 같은 갑싀 데이터가 많다는 의미. 예를들어 변수의 데이터의 다수가 0으로 채워져 있는 경우.\n",
-    "variance threshold 는 독립변수x 와 종속변수y 간의 관계를 고려하지 않기 때문에 분석 차원에서 제거시 종속변수를 제외하고 진행하는 것이 좋음.\n",
+    "왜 제거하는지?  \n",
+    "제거하면 성능이 올라가는지? -> 모델에 적용할 input 변수를 잘 선정하는 것은 모델의 성능에 직접적인 영향을 미침.  \n",
+    "1% 보다 낮은 variance 가 뭔지? 숫자가 낮다?  \n",
+    "열을 통째로 삭제한게 아니라 0.01 이하 값 행을 삭제한것?  \n",
+    "< Feature selection >   \n",
+    "Variance Threshold -> variance(변화량, 분산) 가 threshold 보다 작은 변수를 제거함.  \n",
+    "variance 가 낮다는 것은 변수 안에 같은 값의 데이터가 많다는 의미. 예를들어 변수의 데이터의 다수가 0으로 채워져 있는 경우.  \n",
+    "variance threshold 는 독립변수x 와 종속변수y 간의 관계를 고려하지 않기 때문에 분석 차원에서 제거시 종속변수를 제외하고 진행하는 것이 좋음.  \n",
     "\n",
-    "삭제 하는 방법도 분산이 아니라 다른 방법을 보고 삭제하는 방법도 다수 있음.\n",
-    "참고사이트 https://comafire.github.io/pages/ml-feature-selection/\n",
-    "https://subinium.github.io/feature-selection/\n",
-    "sklearn 에 feature selection methods 다양하게 많이 있음."
+    "삭제 하는 방법도 분산이 아니라 다른 방법을 보고 삭제하는 방법도 다수 있음.  \n",
+    "참고사이트 https://comafire.github.io/pages/ml-feature-selection/  \n",
+    "https://subinium.github.io/feature-selection/  \n",
+    "sklearn 에 feature selection methods 다양하게 많이 있음.  "
    ]
   },
   {
